# guided-agents

./: .gitignore  README.md  gaia_example.py  gaia_scorer.py  pyproject.toml
.github/workflows/: test.yml
example/: core.py  file_loaders.py  guides.py  models.py  run_gaia.py  tools.py
src/guided_agents/: __init__.py  agent_types.py  agents.py  default_tools.py  local_python_executor.py  memory.py  models.py  monitoring.py  tools.py  utils.py
src/guided_agents/prompts/: code_agent.yaml  toolcalling_agent.yaml
tests/: __init__.py  conftest.py  test_models.py  test_models_utils.py
