[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guided_agents"
version = "0.0.0.dev0"
requires-python = ">=3.10"
dependencies = [
  "datasets>=3.3.2",
  "huggingface-hub>=0.28.0",
  "pillow>=11.0.0",
  "jinja2>=3.1.4",
  "rich>=13.9.4",
  "numba>=0.61.0",
]

[project.optional-dependencies]
models = [
  "mlx-lm",
  "mlx-vlm",
  "mlx-whisper",
  "openai",
  "xgrammar",
]
tools = [
  "docx",
  "duckduckgo-search",
  "markdownify",
  "openpyxl",
  "pandas",
  "pdf2image",
  "playwright",
  "python-docx",
  "python-pptx",
  "requests-cache",
  "scipy",
  "tabulate",
]

[tool.ruff]
line-length = 119
lint.ignore = [
  "F403", # undefined-local-with-import-star
  "E501", # line-too-long
]
lint.select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["guided_agents"]
lines-after-imports = 2

[tool.setuptools.package-data]
"guided_agents.prompts" = ["*.yaml"]
