[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guided_agents"
version = "0.0.0.dev0"
requires-python = ">=3.10"
dependencies = [
  "datasets>=3.3.2",
  "huggingface-hub>=0.28.0",
  "pillow>=11.0.0",
  "jinja2>=3.1.4",
  "rich>=13.9.4",
  "numba>=0.61.0",
  "tenacity>=9.1.2",
  "json-repair>=0.44.1",
  "langchain>=0.3.26",
  "hf-xet>=1.1.5",
]

[project.optional-dependencies]
models = [
  "mlx-lm",
  "mlx-vlm>0.1.21",
  "mlx-whisper",
  "openai",
  "xgrammar",
]
tools = [
  "docx",
  "markdownify",
  "openpyxl",
  "pandas",
  "pdf2image",
  "playwright",
  "python-docx",
  "python-pptx",
  "requests-cache",
  "scipy",
  "sounddevice",
  "tabulate",
]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
]

[tool.ruff]
line-length = 119
lint.ignore = [
  "F403", # undefined-local-with-import-star
  "E501", # line-too-long
]
lint.select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["guided_agents"]
lines-after-imports = 2

[tool.setuptools.package-data]
"guided_agents.prompts" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=guided_agents",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
